[package]
name = "test-repo"
version = "2.3.1"
authors = ["johnmanjiro13"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "2.3.0"
base64 = "0.21.0"
bytes = { version = "1.3.0", features = ["serde"] }
chrono = "0.4.23"
crossbeam = "0.8.2"
log = "0.4.17"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["net", "time", "io-util", "rt"] }
uuid = { version = "1.2.2", features = ["v4"] }
